tried fixed bug with opacity on iphone

--- a/css/backs.css
+++ b/css/backs.css
@@ -7,5 +7,5 @@
 #glass,
 #next {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(0, 0, 0, .85);
 }
